# OpenCode

./: .gitignore  BUDDY.md  README.md  SPEC.md  buddy-install.cmd  buddy-uninstall.cmd  buddy.cmd  install-buddy.cmd  pyproject.toml  requirements.txt  run-buddy.cmd
.buddy/skills/: README.md  coding-standards.md  debugging.md  development.md  documentation.md  reasoning.md  test-writing.md  testing.md
examples/: azure_auth_example.py  project_config.azure_openai.toml
scripts/: setup-azure-openai.ps1
src/codebuddy/: __init__.py  agent.py  ai_mart.py  aid_mart.py  auth.py  azure_auth.py  azure_openai_llm.py  chat_ui.py  cli.py  command_broker.py  compaction.py  config.py  conversation.py  edit_broker.py  errors.py  events.py  explorer.py  git_manager.py  global_state.py  hashutil.py  indexer.py  journal.py  llm.py  objective_state.py  paths.py  project_context.py  project_scaffold.py  project_session.py  redaction.py  researcher.py  robustness_eval.py  search.py  session.py  slash.py  steering.py  textfile.py  tool_calls.py  tool_registry.py  tool_result.py  tool_runtime.py  (+2 more)
tests/: test_agent_tools_search.py  test_azure_openai_llm.py  test_chat_ui.py  test_cli_llm_agent_git.py  test_command_broker.py  test_config_session_index.py  test_conversation_history.py  test_edit_broker.py  test_global_state.py  test_llm.py  test_requirements_file.py  test_researcher.py  test_robustness_eval.py  test_setup_artifacts.py  test_slash_commands.py  test_stress_large_project.py  test_tool_results.py  test_validation.py  test_workplan.py
tests/fixtures/: perplexity_bad_tool_outputs.json
