[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "codebuddy"
version = "0.1.0"
description = "Windows-first Python coding agent with safe editing and command brokers."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
authors = [{ name = "Code Buddy" }]
dependencies = [
    "openai>=1.0",
    "httpx>=0.27",
    "prompt_toolkit>=3.0",
    "rich>=13.0",
    "tomli>=2.0; python_version<'3.11'",
]

[project.optional-dependencies]
ui = ["prompt_toolkit>=3.0", "rich>=13.0"]
http = ["httpx>=0.27"]
dev = ["pytest>=8.0"]

[project.scripts]
buddy = "codebuddy.cli:main"
codebuddy = "codebuddy.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[model.roles.main]
provider = "perplexity"
model = "sonar-pro"
